--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
