--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <button type="button" class="btn btn-success btn-lg">Paper</button>
                 <button type="button" class="btn btn-warning btn-lg">Scissors</button>
             </div>
-            <div class="col-12 text-center">
-                <span>hola</span>
+            <div id="message-box" class="col-4 text-center alert offset-md-4">
+                
             </div>
         </div>
     </div>
