--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="container">
+    <header class="header fixed-top bg-primary">
+        <h1 class="text-center">Rock, Paper, Scissors Game</h1>
+    </header>
+    <mainn>
         <div class="row">
             <div class="col-12 options">
-                <button type="button" class="btn btn-primary btn-lg">Rock</button>
+                <button id="begin-game" type="button" class="btn btn-success btn-lg">Begin Game</button>
+                <!--<button type="button" class="btn btn-primary btn-lg">Rock</button>
                 <button type="button" class="btn btn-success btn-lg">Paper</button>
                 <button type="button" class="btn btn-warning btn-lg">Scissors</button>
             </div>
             <div id="message-box" class="col-4 text-center alert offset-md-4">
                 
-            </div>
+            </div>-->
         </div>
-    </div>
+    </main>
+    <footer class="fixed-bottom footer bg-secondary">
+        <h6 class="text-center ">Developed by Samuel Reyes Suárez</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
