Validate rounds input and catch it

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <button id="begin-game" type="button" class="btn btn-success btn-lg">Begin Game</button>
                 <!--<button type="button" class="btn btn-primary btn-lg">Rock</button>
                 <button type="button" class="btn btn-success btn-lg">Paper</button>
-                <button type="button" class="btn btn-warning btn-lg">Scissors</button>
+                <button type="button" class="btn btn-warning btn-lg">Scissors</button>-->
             </div>
             <div id="message-box" class="col-4 text-center alert offset-md-4">
                 
-            </div>-->
+            </div>
         </div>
     </main>
     <footer class="fixed-bottom footer bg-secondary">
