--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             <div class="col-12 options">
                 <button id="begin-game" type="button" class="btn btn-success btn-lg">Begin Game</button>
             </div>
-            <div id="message-box" class="col-4 text-center alert offset-md-4">
-                
-            </div>
+            <div id="message-box" class="col-4 text-center alert offset-md-4"></div>
+            <div id="scoreboard-box" class="col-4 text-center alert offset-md-4"></div>
         </div>
     </main>
     <footer class="fixed-bottom footer bg-secondary">
