Edit body background color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="header fixed-top bg-primary">
+    <header class="header fixed-top bg-success">
         <h1 class="text-center">Rock, Paper, Scissors Game</h1>
     </header>
     <mainn>
