Implement feature to reset game

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div id="message-box" class="col-4 text-center alert offset-md-4"></div>
             <div id="scoreboard-box" class="col-4 text-center alert offset-md-4"></div>
+            <div id="reload-option" class="col-12"></div>
         </div>
     </main>
     <footer class="fixed-bottom footer bg-secondary">
