Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header fixed-top bg-success">
         <h1 class="text-center">Rock, Paper, Scissors Game</h1>
     </header>
-    <mainn>
+    <main>
         <div class="row">
             <div class="col-12 options">
                 <button id="begin-game" type="button" class="btn btn-success btn-lg">Begin Game</button>
